# cereal

./: CMakeLists.txt  README.md
include/: CMakeSharedHeaders.txt
include/cereal/: cerealizable.h
